# demo-cl-forge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
src/demo/: app.py  cli.py  streamlit_app.py
src/demo/pages/: cmf.py  home.py  market.py  ppu.py  rut.py
src/streamlit_cl_forge/: streamlit_app.py  welcome.py
src/streamlit_cl_forge/pages/: home.py  rut.py  verify.py
