[project]
name = "streamlit-cl-forge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matías Schiaffino Tyrer", email = "matias.scht@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "cl-forge>=1.0.1,<2.0.0",
    "streamlit>=1.56.0,<2.0.0",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
