[project]
name = "demo-cl-forge"
version = "0.1.0"
description = "Interactive Streamlit demo showcasing the cl-forge library for Chilean data tools"
readme = { file = "README.md", content-type = "text/markdown" }
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.13,<3.14.0"

authors = [
    { name = "Matías Schiaffino Tyrer", email = "matias.scht@gmail.com" }
]

dependencies = [
    "cl-forge>=1.0.1,<2.0.0",
    "streamlit>=1.56.0,<2.0.0",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "demo"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0,<8.0.0",
    "ipywidgets>=8.1.8,<9.0.0",
    "notebook>=7.5.5,<8.0.0",
    "pyright>=1.1.408,<2.0.0",
    "ruff>=0.15.8,<1.0.0",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TC",   # flake8-type-checking
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["demo"]
